# csit-se-mini-challenge-2023

./: Dockerfile  README.md  exceptions.py  main.py  pyproject.toml  utils.py
models/: flights.py  hotels.py
routers/: flights.py  hotels.py
