[tool.poetry]
name = "csit-swe-mini-challenge-2023"
version = "0.1.0"
description = ""
authors = ["wtlow003 <wtlow003@suss.edu.sg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
pymongo = "^4.4.1"
motor = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
